# vika-cli

./: .cargo-release.toml  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASE.md  TESTING.md  TESTING_APPROACH.md  install.sh  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml  version-bump.yml
.vika-cache/: spec.meta.json
apps/docs/: README.md  package.json  tailwind.config.js
builtin/templates/: api-client-fetch.tera  type-alias.tera  type-enum.tera  type-interface.tera  zod-schema.tera
cli/: CHANGELOG.md  COVERAGE_GOAL_60.md  Cargo.toml  README.md  TEST_COVERAGE_PROGRESS.md  install.ps1
cli/docs/: architecture.md  configuration.md  getting-started.md  troubleshooting.md
cli/schema/: vika-config.schema.json
cli/src/: cache.rs  lib.rs  main.rs
cli/tests/: generate_test.rs  integration_commands_test.rs  integration_main_test.rs  writer_test.rs  (+8 more)
docs/: architecture.md  configuration.md  contributing.md  getting-started.md  templates.md  testing-approach.md  testing.md  troubleshooting.md
schema/: vika-config.schema.json
src/: cache.rs  cli.rs  error.rs  formatter.rs  lib.rs  main.rs  progress.rs
tests/: cache_test.rs  common_schemas_test.rs  conflict_detection_test.rs  formatter_test.rs  generate_test.rs  integration_commands_test.rs  integration_main_test.rs  integration_templates_test.rs  module_filtering_test.rs  module_selector_test.rs  multispec_backward_compat_test.rs  multispec_config_test.rs  multispec_full_integration_test.rs  multispec_integration_test.rs  multispec_manager_test.rs  multispec_snapshot_test.rs  multispec_writer_test.rs  progress_test.rs  schema_resolver_test.rs  snapshot_api_test.rs  snapshot_templates_test.rs  snapshot_types_test.rs  snapshot_zod_test.rs  swagger_parser_test.rs  templates_test.rs
(+181 files in other folders)
