[package]
name = "vika-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vika-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json", "blocking"] }
openapiv3 = "2.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
colored = "2"
anyhow = "1.0"
thiserror = "1.0"
indicatif = "0.17"
tabled = "0.14"
insta = "1.38"
tempfile = "3.10"

