[package]
name = "vika-cli"
version = "1.0.3"
edition = "2021"
rust-version = "1.70"
description = "Generate TypeScript types, Zod schemas, and Fetch-based API clients from OpenAPI/Swagger specifications"
repository = "https://github.com/MahdiZarrinkolah/vika-cli"
license = "MIT"
readme = "README.md"
keywords = ["openapi", "swagger", "typescript", "code-generation", "cli"]
categories = ["development-tools", "web-programming"]
authors = ["Mahdi Zarrinkolah <mz.goldenhat@gmail.com>"]

[lib]
name = "vika_cli"
path = "src/lib.rs"

[[bin]]
name = "vika-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json", "blocking"] }
openapiv3 = "2.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
colored = "2"
anyhow = "1.0"
thiserror = "1.0"
indicatif = "0.17"
tabled = "0.14"
insta = "1.38"
tempfile = "3.10"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
indexmap = "2.0"

